compiler/tests/fail/typing/x86-64/conditional_op_mismatch.jazz
export fn main () -> reg u64 {
  reg u64 x = 0;
  reg bool b = true;
  x = b ? b : x;
  return x;
}
